[package]
name = "qconnect"
version = "0.1.1"
edition = "2024"
authors = ["Andreas Hauser <andreas.github@icloud.com>"]
description = "Standalone qobuz connect client using crates from qbz"
license = "CC-BY-SA-4.0"
keywords = ["qobuz-connect", "qobuz", "command-line", "CLI", "audio"]
repository = "https://github.com/ahcm/qconnect"

[dependencies]
anyhow = "1"
async-trait = "0.1"
cacache = "13"
clap = { version = "4.6", features = ["derive", "env"] }
dirs = "6"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
moka = { version = "0.12", features = ["future"] }
open = "5"
rodio = { version = "0.22", features = ["playback"] }
serde = "1"
aes = "0.9"
base64 = "0.22"
cbc = { version = "0.2", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
ctr = "0.10"
futures-util = "0.3"
hkdf = "0.13"
md-5 = "0.11"
prost = "0.14"
regex = "1"
sha2 = "0.11"
thiserror = "2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
symphonia = "0.5"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "form", "json", "query", "rustls-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde_json = "1"
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
